--- a/Tests/Runtime/Zor.UtilityAI.Tests.asmdef
+++ b/Tests/Runtime/Zor.UtilityAI.Tests.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "Zor.UtilityAI.Tests",
     "references": [
         "GUID:27619889b8ba8c24980f49ee34dbb44a",
-        "GUID:74c7fb4b2499930449d9e75df9a18bfd"
+        "GUID:74c7fb4b2499930449d9e75df9a18bfd",
+        "GUID:e1703ee141f53e64180a32309e02ea34"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
